--- a/index.html
+++ b/index.html
@@ -129,6 +129,7 @@
       v1.2.1 beta: 3-11-2022 (Yes that's 2022, not 2020): Continued to refactor the code and the 100 protium upgrade now works.<br>
       v1.3: 3-14-2022: Added neutrinos! Also added formatting options and a software license, and fixed many bugs.<br>
       v1.3.1: 3-14-2022: Fixed a bug where the CSS and JS were not recognized by the HTML.<br>
+      v1.3.2: 3-14-2022: Fixed a bug where the game kept hard resetting.<br>
     </div>
   </body>
 </html>
