--- a/index.html
+++ b/index.html
@@ -130,6 +130,7 @@
       v1.3: 3-14-2022: Added neutrinos! Also added formatting options and a software license, and fixed many bugs.<br>
       v1.3.1: 3-14-2022: Fixed a bug where the CSS and JS were not recognized by the HTML.<br>
       v1.3.2: 3-14-2022: Fixed a bug where the game kept hard resetting.<br>
+      v1.3.3: 3-14-2022: Fixed a bug where protons do nothing directly after a hard reset.<br>
     </div>
   </body>
 </html>
