--- a/index.html
+++ b/index.html
@@ -151,6 +151,7 @@
         v1.3.2: 3-14-2022: Fixed a bug where the game kept hard resetting.<br>
         v1.3.3: 3-14-2022: Fixed a bug where protons do nothing directly after a hard reset.<br>
         v1.3.4: 3-19-2022: Added a new formatting option, and added subtabs for the Misc. (previously Changelog) tab.<br>
+	v1.3.5: 3-19-2022: Fixed a bug where the minimum power for scientific notation was undefined.<br>
       </div>
       
       <div id = "tabM.4">
