--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
         v1.3.1: 3-14-2022: Fixed a bug where the CSS and JS were not recognized by the HTML.<br>
         v1.3.2: 3-14-2022: Fixed a bug where the game kept hard resetting.<br>
         v1.3.3: 3-14-2022: Fixed a bug where protons do nothing directly after a hard reset.<br>
-        v1.3.4: 3-19-2022: Added a new formatting option, and added subtabs for the Misc. (previously Changelog) tab.<br>
+        v1.3.4: 3-19-2022: Added a new formatting option, added subtabs for the Misc. (previously Changelog) tab, and added a hotkey "H" for Hydrogen atom resets!<br>
 	v1.3.5: 3-19-2022: Fixed a bug where the minimum power for scientific notation was undefined.<br>
       </div>
       
