--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
           <div class="achF" id="ach11D">Active run<span class="tooltip">Have at least 30 electrons but no protons.</span></div>
           <div class="achF" id="ach12D">Idle run<span class="tooltip">Have at least 30 protons but no electrons.</span></div>
           <div class="achF" id="ach13D">Now we're talking<span class="tooltip">Create at least 20,000 energy in the span of one second.</span></div>
-          <div class="achF" id="ach14D">Bonus!<span class="tooltip">Hate a total of at least 10 achievements.</span></div>
+          <div class="achF" id="ach14D">Bonus!<span class="tooltip">Have a total of at least 10 achievements.</span></div>
           <div class="achF" id="ach15D">Fast Hydrogen<span class="tooltip">Have a reset for at least 1 Hydrogen atom that lasts under 4 seconds.</span></div>
           <div class="achF" id="ach16D">Neutrino rookie<span class="tooltip">Have at least 10 neutrinos.</span></div>
           <div class="achF" id="ach17D">That's a lot of particles<span class="tooltip">Have the sum of your protons, electrons, and neutrinos be at least 100.</span></div>
