--- a/index.html
+++ b/index.html
@@ -200,6 +200,7 @@
         v1.4: 3-19-2022: Added achievements! There are 20 of them in this initial batch.<br>
         v1.4.6: 3-20-2022: Fixed a typo and a game-breaking bug.<br>
         v1.5: 3-22-2022: Added neutrons! Also added 5 new achievements and a button to export your save.<br>
+	v1.5.1: 3-23-2022: Fixed a bug where you could get negative protons, negative electrons, and negative neutrinos.<br>
       </div>
       
       <div id = "tabM.4">
