Forgot to add this update to the changelog

--- a/index.html
+++ b/index.html
@@ -314,6 +314,7 @@
         v1.5: 3-22-2022: Added neutrons! Also added 5 new achievements and a button to export your save.<br>
         v1.5.1: 3-23-2022: Fixed a bug where you could get negative protons, negative electrons, and negative neutrinos.
         <br>v1.6: 3-25-2022: Added Deuterium! Also added 5 new achievements and fixed a bug where hard resetting doesn't reset achievements.
+	<br>v1.7: 4-4-2022: Added 6 upgrades! Fixed minor bugs too.
       </div>
       
       <div id = "tabM.4">
