--- a/index.html
+++ b/index.html
@@ -473,7 +473,8 @@
         <br>v1.6: 3-25-2022: Added Deuterium! Also added 5 new achievements and fixed a bug where hard resetting doesn't reset achievements.
         <br>v1.7: 4-4-2022: Added 6 upgrades! Fixed minor bugs too.
         <br>v1.8: 4-13-2022: Added 6 more upgrades, made cost reductions retroactive, added a confirmation to the Hard Reset button, added a periodic table, and added 5 new achievements!
-        <br>
+        <br>v1.8.1: 4-13-2022: Fixed a visual bug where a sentence spoiling a later upgrade was shown before it was supposed to.
+	<br>
       </div>
       
       <div id = "tabM.4">
